force-app/main/default/objects/CEC__c/CEC__c.object-meta.xml
<CustomObject>
    <description>This is the Primary object for MKT - Customer Experience Centre Enhancements which holds the basic details about the CEC meetings scheduled by the team.</description>
    <label>CEC Meeting</label>
    <nameField>
        <label>CEC Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CEC Meeting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>