force-app/main/default/objects/CEC__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CEC Meeting (Account ID)</relationshipLabel>
    <relationshipName>CEC_Meeting1</relationshipName>
    <type>Lookup</type>
</CustomField>