force-app/main/default/objects/CEC__c/fields/Actual_Meeting_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Actual_Meeting_Date_Time__c</fullName>
    <label>Actual Meeting Date/Time</label>
    <type>DateTime</type>
</CustomField>