force-app/main/default/objects/CEC__c/fields/Annual_revenue__c.field-meta.xml
<CustomField>
    <fullName>Annual_revenue__c</fullName>
    <formula>Account_ID__r.AnnualRevenue</formula>
    <label>Annual revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>