force-app/main/default/objects/CEC__c/fields/Anticipated_group_size_NCR_customer__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_group_size_NCR_customer__c</fullName>
    <inlineHelpText>Team needs this information to secure comfortable meeting space</inlineHelpText>
    <label>Anticipated group size (NCR &amp; customer)</label>
    <type>TextArea</type>
</CustomField>