force-app/main/default/objects/CEC__c/fields/Assigned_Rooms__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Rooms__c</fullName>
    <label>Assigned Room</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>507/508 - Group size up to 20,</fullName>
            </value>
            <value>
                <fullName>308 - Group size up to 10,</fullName>
            </value>
            <value>
                <fullName>16B.01 (Retail only) - Group size up to 9,</fullName>
            </value>
            <value>
                <fullName>CEC1 - Group size up to 7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>