force-app/main/default/objects/CEC__c/fields/AV_Support_Name__c.field-meta.xml
<CustomField>
    <fullName>AV_Support_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AV Support Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CEC_Meeting3</relationshipName>
    <type>Lookup</type>
</CustomField>