force-app/main/default/objects/CEC__c/fields/Awards_news_accolades__c.field-meta.xml
<CustomField>
    <fullName>Awards_news_accolades__c</fullName>
    <inlineHelpText>Recent noteworthy news to honor during the briefing</inlineHelpText>
    <label>Awards, news, accolades</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>