force-app/main/default/objects/CEC__c/fields/Bypass_Val__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Val__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is created to bypass the validation rule - Set_the_min_and_max_length_for_fields, on CEC Meeting Object .</description>
    <label>Bypass Validation Rule</label>
    <type>Checkbox</type>
</CustomField>