force-app/main/default/objects/CEC__c/fields/Call_Outs__c.field-meta.xml
<CustomField>
    <fullName>Call_Outs__c</fullName>
    <label>Call Outs</label>
    <type>TextArea</type>
</CustomField>