force-app/main/default/objects/CEC__c/fields/Campaign_ID_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_ID_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign ID Name</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>CEC Meeting</relationshipLabel>
    <relationshipName>CEC_Meeting</relationshipName>
    <type>Lookup</type>
</CustomField>