force-app/main/default/objects/CEC__c/fields/Cause_for_the_customer_to_meet_with_NCR__c.field-meta.xml
<CustomField>
    <fullName>Cause_for_the_customer_to_meet_with_NCR__c</fullName>
    <inlineHelpText>Please share any background such as escalations or team changes that have led to the meeting</inlineHelpText>
    <label>Cause for the customer to meet with NCR?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>