force-app/main/default/objects/CEC__c/fields/CEC_Intake_Creation_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>CEC_Intake_Creation_Date_Time__c</fullName>
    <label>CEC Intake Creation Date/Time</label>
    <type>DateTime</type>
</CustomField>