force-app/main/default/objects/CEC__c/fields/Company_Strategic_Priorities__c.field-meta.xml
<CustomField>
    <fullName>Company_Strategic_Priorities__c</fullName>
    <label>Company Strategic Priorities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>