force-app/main/default/objects/CEC__c/fields/Corporate_earnings_link__c.field-meta.xml
<CustomField>
    <fullName>Corporate_earnings_link__c</fullName>
    <inlineHelpText>List link to latest earnings. If unavailable, list company URL</inlineHelpText>
    <label>Corporate earnings link</label>
    <length>100</length>
    <type>Text</type>
</CustomField>