force-app/main/default/objects/CEC__c/fields/Customer_Competitors__c.field-meta.xml
<CustomField>
    <fullName>Customer_Competitors__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The customer&apos;s competitors in which are aligned to the Account.  This is autopopulated and can be more than 1.</description>
    <label>Who are NCR Competitors?</label>
    <referenceTo>Competitors__c</referenceTo>
    <relationshipLabel>CEC Meeting</relationshipLabel>
    <relationshipName>CEC_Meeting</relationshipName>
    <type>Lookup</type>
</CustomField>