force-app/main/default/objects/CEC__c/fields/Customer_Expectations__c.field-meta.xml
<CustomField>
    <fullName>Customer_Expectations__c</fullName>
    <inlineHelpText>What is the customer hoping to achieve?</inlineHelpText>
    <label>Customer Expectations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>