force-app/main/default/objects/CEC__c/fields/Customer_since__c.field-meta.xml
<CustomField>
    <fullName>Customer_since__c</fullName>
    <inlineHelpText>How long has customer worked with NCR?</inlineHelpText>
    <label>Customer since</label>
    <length>100</length>
    <type>Text</type>
</CustomField>