force-app/main/default/objects/CEC__c/fields/ELT_Attendance__c.field-meta.xml
<CustomField>
    <fullName>ELT_Attendance__c</fullName>
    <label>ELT Attendance Tracking</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mike Hayford</fullName>
            </value>
            <value>
                <fullName>Owen Sullivan</fullName>
            </value>
            <value>
                <fullName>Tim Oliver</fullName>
            </value>
            <value>
                <fullName>Ismail Amla</fullName>
            </value>
            <value>
                <fullName>Dan Antilley</fullName>
            </value>
            <value>
                <fullName>Jim Bedore</fullName>
            </value>
            <value>
                <fullName>Mithu Bhargava</fullName>
            </value>
            <value>
                <fullName>Adrian Button</fullName>
            </value>
            <value>
                <fullName>Dan Campbell</fullName>
            </value>
            <value>
                <fullName>Patrice Graves</fullName>
            </value>
            <value>
                <fullName>Frank Hauck</fullName>
            </value>
            <value>
                <fullName>Dirk Izzo</fullName>
            </value>
            <value>
                <fullName>Don Layden</fullName>
            </value>
            <value>
                <fullName>Stuart Mackinnon</fullName>
            </value>
            <value>
                <fullName>Kate Mandrell</fullName>
            </value>
            <value>
                <fullName>Bill T. Vancuren</fullName>
            </value>
            <value>
                <fullName>Tim Vanderham</fullName>
            </value>
            <value>
                <fullName>David Wilkinson</fullName>
            </value>
            <value>
                <fullName>Marija Zivanovic-Smith</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>