force-app/main/default/objects/CEC__c/fields/Experience_Center__c.field-meta.xml
<CustomField>
    <fullName>Experience_Center__c</fullName>
    <label>Experience Center</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Atlanta</fullName>
            </value>
            <value>
                <fullName>Belgrade</fullName>
            </value>
            <value>
                <fullName>Dundee</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>