force-app/main/default/objects/CEC__c/fields/Ideal_Meeting_Duration__c.field-meta.xml
<CustomField>
    <fullName>Ideal_Meeting_Duration__c</fullName>
    <label>Ideal Meeting Duration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>15 Minutes</fullName>
            </value>
            <value>
                <fullName>30 Minutes</fullName>
            </value>
            <value>
                <fullName>1 Hours</fullName>
            </value>
            <value>
                <fullName>1 Hours 30 Minutes</fullName>
            </value>
            <value>
                <fullName>2 Hours</fullName>
                <label>2 hours</label>
            </value>
            <value>
                <fullName>2 Hours 30 Minutes</fullName>
            </value>
            <value>
                <fullName>3 Hours</fullName>
                <label>3 hours</label>
            </value>
            <value>
                <fullName>3Hours 30 Minutes</fullName>
            </value>
            <value>
                <fullName>4 Hours</fullName>
                <label>4 hours</label>
            </value>
            <value>
                <fullName>4 Hours 30 Minutes</fullName>
            </value>
            <value>
                <fullName>5 Hours</fullName>
            </value>
            <value>
                <fullName>5 Hours 30 Minutes</fullName>
            </value>
            <value>
                <fullName>6 Hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>