force-app/main/default/objects/CEC__c/fields/Internal_Goal__c.field-meta.xml
<CustomField>
    <fullName>Internal_Goal__c</fullName>
    <label>Internal Goal</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>