force-app/main/default/objects/CEC__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CEC Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CEC_Meeting8</relationshipName>
    <type>Lookup</type>
</CustomField>