force-app/main/default/objects/CEC__c/fields/Meeting_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Purpose__c</fullName>
    <label>Meeting Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Top-to-Top Meeting or Introduction</fullName>
            </value>
            <value>
                <fullName>Close Opportunity/Win Back</fullName>
            </value>
            <value>
                <fullName>Prospect with Key Decision Makers in Attendance</fullName>
            </value>
            <value>
                <fullName>Customer at Risk</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>