force-app/main/default/objects/CEC__c/fields/Meeting_Purpose_Other__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Purpose_Other__c</fullName>
    <label>Meeting Purpose: Other</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>