force-app/main/default/objects/CEC__c/fields/Meeting_Requester__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Requester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meeting Requester</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CEC_Meeting</relationshipName>
    <type>Lookup</type>
</CustomField>