force-app/main/default/objects/CEC__c/fields/Name_of_company_for_meeting_materials__c.field-meta.xml
<CustomField>
    <fullName>Name_of_company_for_meeting_materials__c</fullName>
    <inlineHelpText>Exact organization/company name as it should appear on digital signage and meeting materials</inlineHelpText>
    <label>Name of company for meeting materials</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>