force-app/main/default/objects/CEC__c/fields/NCR_Executive_Key_Messaging__c.field-meta.xml
<CustomField>
    <fullName>NCR_Executive_Key_Messaging__c</fullName>
    <inlineHelpText>What would you like NCR executives to communicate to customer?</inlineHelpText>
    <label>NCR Executive Key Messaging</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>