force-app/main/default/objects/CEC__c/fields/NCR_Expectations__c.field-meta.xml
<CustomField>
    <fullName>NCR_Expectations__c</fullName>
    <inlineHelpText>What is NCR’s goal for the meeting?</inlineHelpText>
    <label>NCR Expectations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>