force-app/main/default/objects/CEC__c/fields/NCR_solutions__c.field-meta.xml
<CustomField>
    <fullName>NCR_solutions__c</fullName>
    <inlineHelpText>What NCR solutions would you like to cover?</inlineHelpText>
    <label>NCR solutions to be covered?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>