force-app/main/default/objects/CEC__c/fields/NCR_solutions_installed__c.field-meta.xml
<CustomField>
    <fullName>NCR_solutions_installed__c</fullName>
    <label>NCR solutions installed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>