force-app/main/default/objects/CEC__c/fields/New_or_existing_customer__c.field-meta.xml
<CustomField>
    <fullName>New_or_existing_customer__c</fullName>
    <formula>text(Opportunity__r.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New or existing customer</label>
    <type>Text</type>
</CustomField>