force-app/main/default/objects/CEC__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>CEC Meeting</relationshipLabel>
    <relationshipName>CEC_Meeting</relationshipName>
    <type>Lookup</type>
</CustomField>