force-app/main/default/objects/CEC__c/fields/Personal_Customer_Considerations__c.field-meta.xml
<CustomField>
    <fullName>Personal_Customer_Considerations__c</fullName>
    <description>Any special touches we can consider to make the customer experience more personalized?  Examples:  customer success or partnership milestones, birthday, religious, food considerations, etc.</description>
    <inlineHelpText>Customer success milestones, partnership milestones, favorite foods/beverages, birthday, religious considerations, etc.</inlineHelpText>
    <label>Special requests for personalization?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>