force-app/main/default/objects/CEC__c/fields/Presenters_already_secured__c.field-meta.xml
<CustomField>
    <fullName>Presenters_already_secured__c</fullName>
    <description>What presenters have you secured.</description>
    <label>Presenters already secured?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>