force-app/main/default/objects/CEC__c/fields/Previous_Year_NPS__c.field-meta.xml
<CustomField>
    <fullName>Previous_Year_NPS__c</fullName>
    <formula>Account_Name__r.Previous_Year_NPS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous Year NPS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>