force-app/main/default/objects/CEC__c/fields/RFP_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>RFP_Affiliation__c</fullName>
    <description>Is this briefing affiliated with an active or Upcoming RFP?</description>
    <inlineHelpText>Is this briefing affiliated with an active or upcoming RFP?</inlineHelpText>
    <label>Briefing part of active/upcoming RFP?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>