force-app/main/default/objects/CEC__c/fields/RFP_Name__c.field-meta.xml
<CustomField>
    <fullName>RFP_Name__c</fullName>
    <label>If yes, what is the name of the RFP?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>