force-app/main/default/objects/CEC__c/fields/RVP_Aware__c.field-meta.xml
<CustomField>
    <fullName>RVP_Aware__c</fullName>
    <description>Is your Regional Vice President (RVP) aware of this meeting?  Note that, RVP&apos;s receive a weekly summary of all upcoming meetings each Friday.</description>
    <inlineHelpText>Regional Vice President. RVPs receive a weekly summary of all upcoming briefings each Friday</inlineHelpText>
    <label>Is your RVP aware of this briefing?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>