force-app/main/default/objects/CEC__c/fields/Special_notes_requests__c.field-meta.xml
<CustomField>
    <fullName>Special_notes_requests__c</fullName>
    <label>Special notes/requests</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>