force-app/main/default/objects/CEC__c/fields/Support_Name__c.field-meta.xml
<CustomField>
    <fullName>Support_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The identified Support person information for the CEC request</description>
    <label>Support Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CEC_Meeting6</relationshipName>
    <type>Lookup</type>
</CustomField>