force-app/main/default/objects/CEC__c/fields/Tour_Only__c.field-meta.xml
<CustomField>
    <fullName>Tour_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is to notify the CEC team if they need to build a proposal for customer visit or just giving a tour.</description>
    <label>Tour Only</label>
    <type>Checkbox</type>
</CustomField>