force-app/main/default/objects/CEC__c/fields/When_last_visit__c.field-meta.xml
<CustomField>
    <fullName>When_last_visit__c</fullName>
    <label>When/where was last visit to an NCR CEC?</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>