force-app/main/default/objects/CEC__c/fields/Who_are_customer_competitors__c.field-meta.xml
<CustomField>
    <fullName>Who_are_customer_competitors__c</fullName>
    <label>Who are customer competitors?</label>
    <length>50</length>
    <type>Text</type>
</CustomField>