force-app/main/default/objects/CEC__c/fields/X3rd_Potential_Meeting_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Potential_Meeting_Date_Time__c</fullName>
    <inlineHelpText>Please provide three dates below to discuss with core teams on our intake call to align calendars quickly and prioritize with leaders.

CEC team supports highly collaborative, cross-industry customer briefings. We work with sales teams, subject matter experts and NCR leaders to drive an outcomes-focused approach to hosting customers, prospects and partners.</inlineHelpText>
    <label>3rd Preferred Meeting Date/Time</label>
    <type>DateTime</type>
</CustomField>