force-app/main/default/objects/CEC__c/recordTypes/CEC_Visit.recordType-meta.xml
<RecordType>
    <fullName>CEC_Visit</fullName>
    <active>true</active>
    <label>CEC Visit</label>
</RecordType>